--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor</title>
     <!-- CSS externo -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="converso/style.css" />
 </head>
 <body>
 <main class='tela-principal'>
@@ -73,6 +73,6 @@
     </section>s
 </main>
 <!-- JS externo -->
-<script src="script.js"></script>
+<script src="converso/script.js"></script>
 </body>
 </html>
