--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <footer>Desenvolvido por A.S &copy; 2024</footer>
-    </section>s
+    </section>
 </main>
 <!-- JS externo -->
 <script src="converso/script.js"></script>
